# philips-hue-for-arch

./: .gitignore  LICENSE  README.md  hue-remote.desktop  philips-hue-for-arch.desktop  pyproject.toml
packaging/: .SRCINFO  PKGBUILD
scripts/: update-srcinfo.sh
src/hue_remote/: __init__.py  config.py  hue_api.py  main.py
