[project]
name = "philips-hue-for-arch"
version = "0.1.1"
description = "Desktop GUI for controlling Philips Hue lights on Linux"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
dependencies = [
  "PySide6>=6.8",
  "requests>=2.32",
]

[project.scripts]
philips-hue-for-arch = "hue_remote.main:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
hue_remote = ["assets/*.png"]

[tool.setuptools.packages.find]
where = ["src"]
